fixed loading dots not being visible in dark mode

--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -20,8 +20,7 @@
   .three {
     height: 10px;
     width: 10px;
-    background: #333;
-    // background: var(--color-bg-primary);
+    background-color: var(--loading-dots-color);
     border-radius: 99px;
     animation: up-and-down 0.3s infinite alternate;
   }
