--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,7 @@ body[data-theme="light"] {
   --color-border: #050c1349 ;
   --subtle-box-shadow: 0 1px 2px #00000033;
   --heavy-box-shadow: 2px 2px 5px #0000001e;
+  --loading-dots-color: #333;
 }
 
 body[data-theme="dark"] {
@@ -55,6 +56,7 @@ body[data-theme="dark"] {
   --color-border: #b3bdc97a;
   --subtle-box-shadow: 0 1px 2px #000000;
   --heavy-box-shadow: 2px 2px 5px #0000003e;
+  --loading-dots-color: white;
 }
 
 body {
